@@ -5,7 +5,7 @@
 
 
 //////////////////////////////////////////////////////////////////
-// Only need below logic IF NOT RUNNING AS CRON
+// Only need below init logic IF NOT RUNNING AS CRON
 //////////////////////////////////////////////////////////////////
 if ( $runtime_mode != 'cron' ) {
 	
@@ -221,7 +221,7 @@ require_once($base_dir . "/app-lib/php/other/cookies.php");
 
 }
 //////////////////////////////////////////////////////////////////
-// END UI-ONLY VAR SETTINGS
+// END UI-ONLY INIT LOGIC
 //////////////////////////////////////////////////////////////////
 
 // DON'T LEAVE ANY WHITESPACE AFTER THE CLOSING PHP TAG!
