@@ -43,7 +43,26 @@ require("config.php");
 ///////////////////////////////////////////////////////////////////////////////////////
 if ( file_exists($base_dir . '/cache/events/cron-first-run.dat') ) {
 
-$_SESSION['lite_charts_updated'] = 0;
+    
+    // Only run if charts / alerts has run for the first time already (for better new install UX)
+    // #MUST# BE ABOVE CHARTS / ALERTS LOGIC!
+    if ( file_exists($base_dir . '/cache/events/charts-first-run.dat') ) {
+    
+    	// Re-cache RSS feeds for faster UI runtimes later
+    	foreach($ct_conf['power']['news_feed'] as $feed_item) {
+    	    
+    		if ( isset($feed_item["url"]) && trim($feed_item["url"]) != '' ) {
+    	 	$ct_api->rss($feed_item["url"], 'no_theme', 0, true);
+    	 	}
+    	 	
+    	}
+	
+    	// News feeds - new posts email
+    	if ( $ct_conf['comms']['news_feed_email_freq'] > 0 ) {
+    	$ct_gen->news_feed_email($ct_conf['comms']['news_feed_email_freq']);
+    	}
+	
+    }
 
 
     // Charts and price alerts
