@@ -5555,6 +5555,8 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
 -Additional first-time run optimizations for new installs background tasks
 
+-Finished core backend logic for UPCOMING admin interfaces
+
 v5.15.1 and higher resets light (time period) charts ONCE AFTER UPGRADING FROM v5.15.0 AND EARLIER VERSIONS
 
 v5.12.2 and higher renames the admin config array. ALL CONFIGURATION SETTING
